--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -62,6 +62,7 @@ input {
 	float: right;
 	margin-right: 10px;
 	margin-top: 4px;
+	color: white;
 }
 
 #topBtns img {
@@ -125,34 +126,11 @@ input {
 	height: 0;
 }
 #container {
-	width: 100%;
 	float: left;
 	overflow: hidden;
 }
 #content {
 	padding: 0 10px 0 180px;
-}
-.table{   
-    border-collapse:collapse;
-}
-
-.table-header{
-    text-align:center;
-    background:none repeat scroll 0 0 #E5E5E5;
-    border-bottom:1px solid #BBBBBB;
-    padding:10px;
-}
-
-.table-odd-row{
-    text-align:center;
-    background:none repeat scroll 0 0 #FFFFFFF;
-    border-top:1px solid #BBBBBB;
-}
-
-.table-even-row{
-    text-align:center;
-    background:none repeat scroll 0 0 #F9F9F9;
-    border-top:1px solid #BBBBBB;
 }
 
 
@@ -173,13 +151,6 @@ input {
 	top: 110px;
 	padding: 5px;
 	background: rgb(165,165,165); /* Old browsers */
-	background: -moz-linear-gradient(left, rgba(165,165,165,1) 0%, rgba(117,117,117,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(165,165,165,1)), color-stop(100%,rgba(117,117,117,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(left, rgba(165,165,165,1) 0%,rgba(117,117,117,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(left, rgba(165,165,165,1) 0%,rgba(117,117,117,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(left, rgba(165,165,165,1) 0%,rgba(117,117,117,1) 100%); /* IE10+ */
-	background: linear-gradient(to right, rgba(165,165,165,1) 0%,rgba(117,117,117,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a5a5a5', endColorstr='#757575',GradientType=1 ); /* IE6-9 */
 }
 #sideLeft ul li a{
     color: black;
@@ -193,21 +164,15 @@ input {
 /* Footer
 -----------------------------------------------------------------------------*/
 #footer {
-	margin: -60px auto 0;
-	min-width: 700px;
-	height: 40px;
-	position: relative;
+	height: 20px;
+	z-index: 9999;
+	bottom: 0px;
+	width: 100%;
+	margin: -60px 0 0;
 	text-align: center;
 	font-size: 1.2em;
-	padding-top: 20px;
 	background: rgb(76,76,76); /* Old browsers */
-	background: -moz-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 27%, rgba(71,71,71,1) 45%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(76,76,76,1)), color-stop(27%,rgba(102,102,102,1)), color-stop(45%,rgba(71,71,71,1)), color-stop(91%,rgba(28,28,28,1)), color-stop(100%,rgba(19,19,19,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(76,76,76,1) 0%,rgba(102,102,102,1) 27%,rgba(71,71,71,1) 45%,rgba(28,28,28,1) 91%,rgba(19,19,19,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(76,76,76,1) 0%,rgba(102,102,102,1) 27%,rgba(71,71,71,1) 45%,rgba(28,28,28,1) 91%,rgba(19,19,19,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, rgba(76,76,76,1) 0%,rgba(102,102,102,1) 27%,rgba(71,71,71,1) 45%,rgba(28,28,28,1) 91%,rgba(19,19,19,1) 100%); /* IE10+ */
-	background: linear-gradient(to bottom, rgba(76,76,76,1) 0%,rgba(102,102,102,1) 27%,rgba(71,71,71,1) 45%,rgba(28,28,28,1) 91%,rgba(19,19,19,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
+	position: fixed;
 }
 
 
