wydruk etykiet in progress. aplikacja wstaje i działa

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -133,6 +133,10 @@ input {
 	padding: 0 10px 0 180px;
 }
 
+.table {
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
 
 .ui-growl {
 	padding-top: 80px;
